--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -218,6 +218,11 @@ $print-logo-width:          300px;
         -ms-filter: none !important;
     } // Black prints faster: h5bp.com/s
 
+    html {
+        font-size: 8pt !important;
+        -webkit-print-color-adjust: exact;
+    }
+
     @page { margin: 1cm; }
 
 
@@ -250,7 +255,6 @@ $print-logo-width:          300px;
     li {
         orphans: 3;
         widows: 3;
-        font-size: 0.75em !important;
     }
 
     h2,
@@ -727,13 +731,6 @@ $print-logo-width:          300px;
     }
     .menu-tabbed li a {
         font-size: 1.25em !important;
-    }
-    dl.timeline dt:last-child strong, dl.timeline dt:first-child strong,
-    dl.timeline dd:last-child strong, dl.timeline dd:first-child strong {
-        font-size: 0.75em !important;
-    }
-    dl.timeline .title {
-        font-size: 0.75em !important;
     }
 
     
