WIP-2370: +helper class to hide content from printing

--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -375,6 +375,10 @@ $print-logo-width:          300px;
         display: block !important;
     }
 
+    .screen-only {
+        display: none !important;
+    }
+    
 
     /** Small UI elements */
 
