--- a/6-components/_components.alert-block.scss
+++ b/6-components/_components.alert-block.scss
@@ -4,13 +4,28 @@
 
 //tools 
 @mixin alert-colors ($color) {
-    border-left: 2px solid mix(darken($color, 25%),desaturate($color, 25%),50%);
-    background-color: $color;
-    color: mix(darken($color, 70%), saturate($color, 50%), 90%);
+    @media screen {
+        border-left: 2px solid mix(darken($color, 25%),desaturate($color, 25%),50%);
+        background-color: $color;
+        color: mix(darken($color, 70%), saturate($color, 50%), 90%);
+    }
 }
 .alert {
     padding: 1.5em;
     margin: 0.5em 0;
+
+    @media print {
+        font-style: italic !important;
+
+        &:before {
+            margin-right: .25em;
+            font-weight: $weight-bold;
+            content: "Important:";
+            text-decoration: none !important;
+            float: left;
+        }
+    }
+
     &.warning {
         @include alert-colors($yellow-pearl-lusta);
     }
