WIP-2370: chrome v49 .staff-block active tab print styling hack

--- a/6-components/_components.staff-block.scss
+++ b/6-components/_components.staff-block.scss
@@ -5,6 +5,8 @@
 .staff-block {
     display: flex;
     padding: 1.5em;
+    font-size: 1.125rem;
+
     .staff-image {
         width: 15%;
         margin-right: 1.25em;
