--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -39,9 +39,9 @@ $tile-bg:      #f0f0f0;
     page-break-inside: avoid; /* Firefox is dumb */
     break-inside: avoid;
     // Desktop-view ONLY
-    display: inline-block;
-    margin-bottom: 1.2em;
-    background: $tile-bg;
+    // display: inline-block;
+    // margin-bottom: 1.2em;
+    // background: $tile-bg;
     vertical-align: top;
     width: 100%;
 
@@ -62,7 +62,11 @@ $tile-bg:      #f0f0f0;
         margin: .5em 0;
         text-align: center;
     }
-
+    
+    .sub-title {
+        color: $grey-dusty-gray;
+        font-weight: $weight-normal;
+    }
     .code {
         display: block;
         float: right;
@@ -71,6 +75,14 @@ $tile-bg:      #f0f0f0;
         font-size: 90%;
         font-weight: $weight-normal;
         color: $grey-dusty-gray;
+    }
+
+   article {
+        margin-bottom: 1.2em;
+        background: $tile-bg;
+        width: 100%;
+        padding: 0.5em 0em;
+        display: inline-block;
     }
 
     &:nth-child(odd){ margin-left: 0; }
