[ADD] - KIS button position rules

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -26,6 +26,9 @@
     }
 }
 
+.kis-requirements {
+    display: inline-block;
+}
 
 /*===============================
 =    DEGREE REQUIREMENTS BLOCK  =
