--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -94,7 +94,6 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 // Makes two col button container with one button left & one right
 .two-btn-nav {
     font-size: 115%; // Large buttons sizing - propagete into its own class
-    @include make-table-column( $two-btn-layout );
 
     p {
         margin-bottom: .35em;
@@ -104,7 +103,9 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 
     .btn { margin: 0; }
 
-    &:first-child { padding-right: .5em; }
+    &:first-child {
+        padding-right: .5em;
+    }
 
     &:last-child {
         padding-left: .5em;
@@ -114,11 +115,25 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
             text-align: right;
         }
     }
+
+    @include media( $tablet-and-bigger ) {
+        &:first-child {
+            .two-btn-wrap { padding-left: 20%; }
+        }
+
+        &:last-child {
+            .two-btn-wrap { padding-right: 20%; }
+        }
+    }
 }
 
-.two-col-layout {
-    .two-btn-nav.block:last-child { padding-top: $block-margin; }
-}
+    .sector .two-col-layout .two-btn-nav.block {
+        display: table-cell;
+        width: 100% * $two-btn-layout; // Makes `two button columns` same width
+
+        &:last-child { padding-top: $block-margin; } // Locks top padding for mobile views
+    }
+
 
 // Sticks panels to the bottom
 .mobile-sticky-down {
