--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -45,6 +45,10 @@
         margin: .9em 0 0;
         font-size: 90%;
     }
+
+    @include media ( $tablet-and-bigger ) {
+        .collapsible__control { text-align: left; }
+    }
 }
 
 .requirements-list {
