--- a/6-components/_components.base.scss
+++ b/6-components/_components.base.scss
@@ -16,7 +16,7 @@
 @import '_components.contact-block.scss';
 @import '_components.image-blocks.scss';
 @import '_components.quote-block.scss';
-@import '_components.facts-block.scss';
+@import '_components.detail-overview.scss';
 @import '_components.degree-requirements.scss';
 @import '_components.video-block.scss';
 @import '_components.notification-overlay.scss';
