--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -21,8 +21,7 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 .menu-tabbed {
     display: table;
     table-layout: fixed;
-    width: 100%;
-    height: 1px;
+    @include size( 100% 1px );
     text-align: center;
 
     // 1st level menu items
@@ -55,9 +54,7 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
                     color: inherit;
                 }
             }
-            &:after {
-                @include objectify();
-                position: absolute;
+            @include after( $position: absolute ) {
                 left: 50%;
                 bottom: 0;
                 margin-left: -$menu-tabbed-item-triangle-width / 2;
@@ -68,8 +65,7 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 
         > a {
             display: table;
-            width: 100%;
-            height: 100%;
+            @include size( 100% );
             padding: $menu-tabbed-padding-vertic $menu-tabbed-padding-horiz;
             font-size: 1.1em;
             font-family: $caption-font-family;
@@ -134,12 +130,16 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
         &:last-child { padding-top: $block-margin; } // Locks top padding for mobile views
     }
 
+.sticky-top {
+    box-shadow: rgba(#000, .2) 0 1px 20px;
+}
 
-// Sticks panels to the bottom
+
+// Sticks panels to the bottom (Mobile only)
 .mobile-sticky-down {
-    box-shadow: rgba(#000, .12) 0 -1px 10px;
-
     @include media( $mobile-large-and-smaller ) {
+        box-shadow: rgba(#000, .12) 0 -1px 10px;
+
         &.sector {
             z-index: $z-index-top;
             @include position( fixed, null 0 0 0);
