--- a/7-trumps/_trumps.base.scss
+++ b/7-trumps/_trumps.base.scss
@@ -9,3 +9,4 @@
 @import 'trumps.new-navigation.scss';
 @import 'trumps.site-header.scss';
 @import 'trumps.layout.scss';
+@import 'trumps.plugins.scss';
