[FIX] Allows select2 selector to be resized, adds proper padding to the first qual inside a list of expandable quals, refactoring

--- a/1-settings/_settings.colours.scss
+++ b/1-settings/_settings.colours.scss
@@ -60,6 +60,7 @@ $grey-dusty-gray:      #999;
 $grey-stack:           #808080;
 $grey-mako:            #475153;
 $grey-mine-shaft:      #333;
+$grey-dove:            #666;
 
 $yellow-spring-wood:   #f4f4e9;
 
