--- a/7-trumps/_trumps.plugins.scss
+++ b/7-trumps/_trumps.plugins.scss
@@ -4,12 +4,25 @@
 
 
     /** Select2 custom selector:  https://github.com/select2/select2 */
-    .select2-container {}
+    //.select2-container {}
+    .select2-selection__arrow {
+        top: 50% !important;
+        margin-top: -13px; // 1/2 of the selection__arrow's height
+    }
 
     .detail-overview {
         .select2-container {
             position: relative; top: -.1em;
             margin-left: .3em;
             font-weight: $weight-bold;
+        }
+    }
+
+    .form__select + .select2 {
+        font-weight: $weight-bold;
+
+        .select2-selection--single {
+            height: auto;
+            padding: .25em;
         }
     }
